# archgpu

./: .gitignore  Cargo.toml  README.md  build.rs
packaging/: PKGBUILD  arch-nvidia-tweaker.desktop  com.github.arch-nvidia-tweaker.policy
src/: cli.rs  gui.rs  main.rs
src/core/: aur.rs  auto.rs  bootloader.rs  cleanup.rs  cpu.rs  diagnostics.rs  essentials.rs  gaming.rs  gpu.rs  groups.rs  hardware.rs  mod.rs  power.rs  prime.rs  state.rs  troubleshoot.rs  wayland.rs
src/utils/: fs_helper.rs  mod.rs  process.rs
ui/: main_window.slint
