[package]
name = "arch-nvidia-tweaker"
version = "0.1.0"
edition = "2021"
description = "Arch Linux post-install configurator for NVIDIA, Wayland, hybrid-graphics power, and gaming"
license = "MIT OR Apache-2.0"
default-run = "arch-nvidia-tweaker"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
slint = "1.16"
regex = "1.12"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[build-dependencies]
slint-build = "1.16"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
